--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,7 @@
         src="resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
-            "com.ag.agdms": "./"
+            "comagagdms": "./"
         }'
         data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="com.ag.agdms"
+        data-name="comagagdms"
         data-id="container"
-        data-settings='{"id" : "com.ag.agdms"}'
+        data-settings='{"id" : "comagagdms"}'
         data-handle-validation="true"
     ></div>
 </body>
